--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,11 @@
         "php": ">=7.0.0",
         "cviebrock/eloquent-sluggable": "^4.4",
         "fideloper/proxy": "~3.3",
+        "guzzlehttp/guzzle": "~6.0",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^2.1"
+
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -58,4 +61,6 @@
         "sort-packages": true,
         "optimize-autoloader": true
     }
+
+
 }
