--- a/composer.json
+++ b/composer.json
@@ -22,19 +22,20 @@
         "symfony/thanks": "^1.0"
     },
     "autoload": {
+        "files": [
+            "core/helper.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
         ],
         "psr-4": {
             "App\\": "app/",
-            "Yourcoupon": "yourcoupon/",
-            "Frontend": "yourcoupon/Frontend/",
-            "Core": "core/"
-        },
-        "files": [
-            "core/helper.php"
-        ]
+            "Yourcoupon\\": "yourcoupon/",
+            "Frontend\\": "yourcoupon/Frontend/",
+            "Core\\": "core/"
+        }
+
     },
     "autoload-dev": {
         "psr-4": {
